--- a/estilos/style.css
+++ b/estilos/style.css
@@ -35,3 +35,12 @@ section#telefone {
     background-color: blue;
     background: url(../imagens/frame-iphone.png) no-repeat;
 }
+
+iframe#tela {
+    position: relative;
+    top: 89px;
+    left: 24px;
+    width: 322px;
+    height: 575px;
+    
+}
